[package]
edition = "2021"
name = "wasm-rp2040-runtime"
version = "0.1.0"
authors = ["PotatoOfDoom <8769019+PotatoOfDoom@users.noreply.github.com>"]
resolver = "2"

[profile.release]
strip = true
codegen-units = 1
lto = true
panic = "abort"
opt-level = "z"

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-storage = "0.3.1"

cortex-m-rt = "0.7.5"

embassy-executor = { version = "0.7", features = [
    "task-arena-size-1024",
    "arch-cortex-m",
    "executor-thread",
    "defmt",
    "executor-interrupt",
] }
embassy-sync = { version = "0.6" }
embassy-time = { version = "0.4", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
cortex-m = { version = "0.7.7" }
embassy-rp = { version = "0.3", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp2040",
] }
smart-leds = "0.4.0"
tinywasm = { git = "https://github.com/PotatoOfDoom/tinywasm.git", default-features = false, features = [
    "parser",
    "portable-atomic",
] }
embedded-alloc = "0.6.0"
