[package]
edition = "2021"
name = "wasm-rp2040-runtime"
version = "0.1.0"
authors = ["PotatoOfDoom <8769019+PotatoOfDoom@users.noreply.github.com>"]
resolver = "2"

[profile.release]
debug = 2
codegen-units = 1
lto = true
panic = "abort"
opt-level = "z"

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embassy-rp = { version = "0.3", features = [
    "defmt",
    "binary-info",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp235xb",
] }
embassy-executor = { version = "0.7", features = [
    "task-arena-size-1024",
    "arch-cortex-m",
    "executor-thread",
    "defmt",
    "executor-interrupt",
] }
embassy-sync = { version = "0.6" }
embassy-time = { version = "0.4", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
cortex-m = { version = "0.7.7" }
cortex-m-rt = "0.7.5"
smart-leds = "0.4.0"
tinywasm = { git = "https://github.com/PotatoOfDoom/tinywasm.git", default-features = false, features = [
    "parser",
    "portable-atomic",
] }
embedded-alloc = "0.6.0"
